[gd_scene load_steps=6 format=3 uid="uid://b8thd0afb5hn"]

[ext_resource type="Script" path="res://Scripts/Tasks/GuitarTask/guitar_minigame.gd" id="1_y5sts"]
[ext_resource type="Texture2D" uid="uid://5g0rm5tsh6d7" path="res://Sprites/Background/GuitarMinigameBG.PNG" id="2_rbgqp"]
[ext_resource type="PackedScene" uid="uid://isxr15a1vllm" path="res://Scenes/Tasks/Guitar/guitar_pressed.tscn" id="2_v4mhw"]

[sub_resource type="LabelSettings" id="LabelSettings_gq8qv"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nf10q"]
size = Vector2(214, 20)

[node name="Guitar Minigame" type="Node2D"]
script = ExtResource("1_y5sts")

[node name="RichTextLabel" type="Label" parent="."]
z_index = 21
offset_left = -74.0
offset_top = 115.0
offset_right = -34.0
offset_bottom = 155.0
scale = Vector2(3.01142, 3.01142)
text = "<"
label_settings = SubResource("LabelSettings_gq8qv")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="Label" parent="."]
z_index = 21
offset_left = 46.0
offset_top = 114.0
offset_right = 86.0
offset_bottom = 154.0
scale = Vector2(3.01142, 3.01142)
text = ">"
label_settings = SubResource("LabelSettings_gq8qv")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel3" type="Label" parent="."]
z_index = 21
offset_left = 36.0
offset_top = 129.0
offset_right = 76.0
offset_bottom = 169.0
rotation = 1.57079
scale = Vector2(3.01142, 3.01142)
text = ">"
label_settings = SubResource("LabelSettings_gq8qv")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel4" type="Label" parent="."]
z_index = 21
offset_left = -46.0
offset_top = 144.0
offset_right = -6.00003
offset_bottom = 184.0
rotation = -1.57079
scale = Vector2(3.01142, 3.01142)
text = ">"
label_settings = SubResource("LabelSettings_gq8qv")
metadata/_edit_use_anchors_ = true

[node name="GuitarMinigameBg" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(123, 128)
texture = ExtResource("2_rbgqp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="GuitarTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DeathBox" type="Area2D" parent="."]
position = Vector2(-15, 195)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
position = Vector2(10, -1)
shape = SubResource("RectangleShape2D_nf10q")

[node name="Input_1" type="Marker2D" parent="."]
position = Vector2(-63, 135)

[node name="Input_2" type="Marker2D" parent="."]
position = Vector2(-26, 135)

[node name="Input_3" type="Marker2D" parent="."]
position = Vector2(17, 135)

[node name="Input_4" type="Marker2D" parent="."]
position = Vector2(49, 135)

[node name="Spawnpoints" type="Node2D" parent="."]
z_index = 2
position = Vector2(-340, -154)

[node name="Point1" type="Marker2D" parent="Spawnpoints"]
position = Vector2(-150, -220)

[node name="Point2" type="Marker2D" parent="Spawnpoints"]
position = Vector2(-113, -220)

[node name="Point3" type="Marker2D" parent="Spawnpoints"]
position = Vector2(-70, -220)

[node name="Point4" type="Marker2D" parent="Spawnpoints"]
position = Vector2(-30, -220)

[node name="GuitarPressed" parent="." instance=ExtResource("2_v4mhw")]
position = Vector2(-362, -175)

[node name="TERMINATION" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="GuitarTimer" to="." method="_on_guitar_timer_timeout"]
[connection signal="area_entered" from="DeathBox" to="." method="_on_death_box_area_entered"]
[connection signal="area_entered" from="GuitarPressed" to="." method="_on_guitar_pressed_area_entered"]
[connection signal="timeout" from="TERMINATION" to="." method="_on_termination_timeout"]
